[package]
name = "chc-carbon-trading"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# futures = "0.3"
# async-std = "1.11.0"
[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.18.0", features = ["full"] }
serde_json = "1.0"
serde = "1.0.136"
serde_derive = "1.0.136"
serde_bytes = "0.11"
regex="1"
lettre = "0.9"
lettre_email = "0.9"
html_query_parser = "0.3.1"
log = "0.4.0"
env_logger = "0.8.4"
sqlite = "0.26.0"
html_editor = "0.5.1"
